--- a/moviehub/angular.json
+++ b/moviehub/angular.json
@@ -25,12 +25,14 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               {
+
                 "glob": "**/*",
                 "input": "public"
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/primeflex/primeflex.css"
             ]
           },
           "configurations": {
