--- a/moviehub/package.json
+++ b/moviehub/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^20.1.0",
     "@primeng/themes": "^20.0.0",
     "@primeuix/themes": "^1.2.1",
+    "primeflex": "^4.0.0",
     "primeng": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
