--- a/moviehub/angular.json
+++ b/moviehub/angular.json
@@ -32,7 +32,9 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/primeflex/primeflex.css"
+              "node_modules/primeflex/primeflex.css",
+              "node_modules/primeicons/primeicons.css"
+
             ]
           },
           "configurations": {
