--- a/moviehub/package.json
+++ b/moviehub/package.json
@@ -29,6 +29,7 @@
     "@primeng/themes": "^20.0.0",
     "@primeuix/themes": "^1.2.1",
     "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
     "primeng": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
